--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: trusty
 language: node_js
 node_js:
   - "12"
@@ -6,6 +5,8 @@ before_script:
   - npm install
 script: npm run build
 deploy:
+  edge:
+    branch: v1.8.47
   local-dir: dist/collegues-front
   provider: pages
   skip-cleanup: true
